--- a/DaocClientLib/packages.config
+++ b/DaocClientLib/packages.config
@@ -3,4 +3,5 @@
   <package id="OpenTK" version="1.1.1589.5942" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="7ZipCLI" version="9.20.0" targetFramework="net4-client" />
 </packages>
