--- a/DaocClientLib.Test/DaocClientLib.Test.csproj
+++ b/DaocClientLib.Test/DaocClientLib.Test.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="ClientDataWrapperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TinyMPKTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DaocClientLib\DaocClientLib.csproj">
