Updated : TreeReplacement Constructor Error Reporting Updated : JumpPoint data Parsing and Error Reporting Added : New Data Wrapper Import Unit Tests

--- a/DaocClientLib.Test/DaocClientLib.Test.csproj
+++ b/DaocClientLib.Test/DaocClientLib.Test.csproj
@@ -69,6 +69,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientDataWrapperImportTest.cs" />
     <Compile Include="ClientDataWrapperTest.cs" />
     <Compile Include="PCXDecoderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
