--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "niflib.net"]
 	path = niflib.net
 	url = https://github.com/dol-leodagan/niflib.net
+[submodule "gwen-donet"]
+	path = gwen-donet
+	url = https://github.com/dol-leodagan/gwen-dotnet/
