--- a/DaocClientLib.Drawing/DaocClientLib.Drawing.csproj
+++ b/DaocClientLib.Drawing/DaocClientLib.Drawing.csproj
@@ -104,8 +104,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CityRenderer.cs" />
+    <Compile Include="ClientDrawingWrapper.cs" />
+    <Compile Include="DungeonRenderer.cs" />
+    <Compile Include="TerrainRenderer.cs" />
     <Compile Include="ZoneDrawingExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZoneRenderer.cs" />
+    <Compile Include="ZoneRendererChooser.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DaocClientLib\DaocClientLib.csproj">
