--- a/DaocClientLib.Drawing/DaocClientLib.Drawing.csproj
+++ b/DaocClientLib.Drawing/DaocClientLib.Drawing.csproj
@@ -123,5 +123,8 @@
       <Name>Niflib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ProfilingSessions\Session20151114_213523.sdps" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
