--- a/DaocClientLib.Demo/DaocClientLib.Demo.csproj
+++ b/DaocClientLib.Demo/DaocClientLib.Demo.csproj
@@ -70,7 +70,7 @@
       <HintPath>$(SolutionDir)packages\OpenTK.1.1.1589.5942\lib\NET40\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="SharpNav">
-      <HintPath>..\packages\SharpNav.OpenTK.1.0.0-alpha2\lib\net40\SharpNav.dll</HintPath>
+      <HintPath>..\Dependencies\SharpNav.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
