Added : Mesh Class Handling matching Client logic

--- a/DaocClientLib.Drawing/DaocClientLib.Drawing.csproj
+++ b/DaocClientLib.Drawing/DaocClientLib.Drawing.csproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Compile Include="CityRenderer.cs" />
     <Compile Include="ClientDrawingWrapper.cs" />
+    <Compile Include="ClientMesh.cs" />
     <Compile Include="DungeonRenderer.cs" />
     <Compile Include="TerrainRenderer.cs" />
     <Compile Include="ZoneDrawingExtensions.cs" />
